# open_gl_udemy

./: CMakeLists.txt  CMakePresets.json  camera.cpp  camera.hpp  gl_window.cpp  gl_window.hpp  light.cpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
shaders/: shader.frag  shader.vert
